[package]
name = "oggify"
version = "0.1.0"
authors = ["Lorenzo Pistone <blaffablaffa@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Download Spotify tracks to Ogg Vorbis format with a Premium account"
keywords = ["spotify"]
repository = "https://github.com/pisto/oggify"
readme = "README.md"

[dependencies]
tokio-core = "0.1.17"
librespot-core = "0.1.3"
librespot-metadata = "0.1.3"
librespot-audio = "0.1.3"
regex = "1.8.1"
log = "0.4.17"
env_logger = "0.9.3"
scoped_threadpool = "0.1.9"
