[package]
name = "oggify"
version = "0.1.0"
authors = ["Lorenzo Pistone <blaffablaffa@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Download Spotify tracks to Ogg Vorbis format with a Premium account"
keywords = ["spotify"]
repository = "https://github.com/pisto/oggify"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["rt","rt-multi-thread", "macros", "signal", "sync", "parking_lot", "process"] }
librespot-core = "0.4.2"
librespot-metadata = "0.4.2"
librespot-audio = "0.4.2"
regex = "1.8.1"
log = "0.4.17"
env_logger =  { version = "0.10", default-features = false, features = ["color", "humantime", "auto-color"] }
scoped_threadpool = "0.1.9"
